# mcc

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  encoding.yaml
.github/workflows/: release.yml  test.yml
src/: app.rs  encoder.rs  main.rs  model.rs  preset.rs  prober.rs  scanner.rs
src/ui/: detail.rs  encoding.rs  list.rs  mod.rs  popup.rs  status_bar.rs  theme.rs
