[package]
name = "mcc"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time", "io-util", "fs"] }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
